test_regress/t/t_func_refio_bad.out
%Error: t/t_func_refio_bad.v:16:17: Ref argument requires matching types; port 'q' requires VAR 'q' but connection is CONST '?32?sh2a'.
                                  : ... In instance t
   16 |       queue_set(42);   
      |                 ^~
%Error: Exiting due to
